# nss-tarballs-as-git

./: Makefile.in  README.md  autogen.sh  configure.ac  nss.pc.in
mozilla/security/nss/cmd/: manifest.mn
